cmake_minimum_required(VERSION 3.20)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp Aeroporto.cpp Aeroporto.h Aviao.cpp Aviao.h Voo.cpp Voo.h Service.cpp Service.h Passageiro.cpp Passageiro.h CarrinhoDeTransporte.cpp CarrinhoDeTransporte.h TransporteTerrestre.cpp TransporteTerrestre.h Carruagem.cpp Carruagem.h Bagagem.cpp Bagagem.h ModelCar.cpp ModelCar.h)
